# oracle-elt

./: .gitignore  GEMINI.md  Makefile  drop_tables.sql  main.py  package-lock.json  pyproject.toml  scrape_trip_data.py
dagster_project/: repository.py
elt/: .user.yml  dbt_project.yml  profiles.yml
elt/macros/: log_dbt_results.sql  parse_dbt_results.sql
elt/models/: dbt_run_results.sql  dim_calendar.sql  mart_green_taxi.sql  mart_orders.sql  mart_supply_demand.sql  mart_taxi_tripdata.sql  mart_yellow_taxi.sql  schema.yml  stg_green_taxi.sql  stg_yellow_taxi.sql  test_post_hook_model.sql
elt/models/example/: calendar.sql  schema.yml
elt/seeds/: DIM_GREEN_TAXI.csv  DIM_YELLOW_TAXI.csv  INIT_REPLEN.csv  SUPPLY.csv  schema.yml
