[project]
name = "oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dbt-core>=1.10.13",
    "dbt-oracle>=1.9.4",
    "dagster",
    "dagster-dbt",
    "dagster-webserver>=1.11.14",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "pip>=25.2",
]
